Switched over to sun/misc/BASE64Encoder in all places, backported class and using that for compatibility with older Android runtimes